--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
     <a href="/prc1/index.html">prc1</a>
     <a href="/table/index.html">table</a>
     <a href="/z-index/index.html">z-index</a>
+    <a href="/practical exam 2/index.html">practical exam2</a>
+    <a href="/project 2/index.html">project2</a>
 </body>
 </html>
