--- a/project 1/index.html
+++ b/project 1/index.html
@@ -629,6 +629,44 @@
       </div>
 
     </div>
+
+    <hr>
+
+    <!-- footer section start -->
+<footer class="footer">
+  <div class="footer-container">
+    <div class="footer-column">
+      <h4>About Styler</h4>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p> 
+    </div>
+    <div class="footer-column">
+      <h4>Categories</h4>
+      <ul>
+        <li><a href="#">Woman Denim</a></li>
+        <li><a href="#">Accessories</a></li>
+        <li><a href="#">Man Denim</a></li>
+        <li><a href="#">Clothes</a></li>
+        <li><a href="#">Shoes</a></li>
+      </ul>
+    </div>
+    <div class="footer-column">
+      <h4>Campaigns</h4>
+      <ul>
+        <li><a href="#">Winter Shoes</a></li>
+        <li><a href="#">Women T-shirts</a></li>
+        <li><a href="#">%50 Sales</a></li>
+        <li><a href="#">Outlet</a></li>
+        <li><a href="#">Pre-Sale</a></li>
+      </ul>
+    </div>
+  </div>
+  <div class="footer-bottom">
+    <p>TEL: 0980 444 45 456 - MAIL:HELLO@DEMO.COM</p>
+  </div>
+</footer>
+
+<!--footer end-->
+
   </div>
 
 
