--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
     <a href="/z-index/index.html">z-index</a>
     <a href="/practical exam 2/index.html">practical exam2</a>
     <a href="/project 2/index.html">project2</a>
+    <a href="/project 1/index.html">project1</a>
+    <a href="/practical exam1/index.html">practical exam1</a>
 </body>
 </html>
