--- a/practical exam1/index.html
+++ b/practical exam1/index.html
@@ -1,108 +1,382 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Practical exam-1</title>
 
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css" />
 
+  <!-- fontawsome cdn start -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+  <!-- font awsome cdn end -->
 
+  <!-- Bootsreap CSS cdn start -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <!-- bootstreap CSS cdn end -->
+
+  <!-- Link Swiper's CSS start -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
+  <!-- Link Swiper's CSS end -->
 </head>
 
 <body>
-    <div class="container-fluid">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                Dropdown
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
+  <!-- header start -->
 
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                        </li>
-                    </ul>
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
-                </div>
-            </div>
-        </nav>
+  <header>
+    <div class="container-fluid d-flex justify-content-between header align-items-center">
+      <h1>ESTY</h1>
+      <nav class="d-lg-block d-none">
+        <ul class="d-flex justify-content-around gap-4 list-unstyled">
+          <li>
+            <a href="#" class="text-decoration-none text-dark fs-5">Home</a>
+          </li>
+          <li>
+            <a href="#" class="text-decoration-none text-dark fs-5">about</a>
+          </li>
+          <li>
+            <a href="#" class="text-decoration-none text-dark fs-5">Services</a>
+          </li>
+          <li>
+            <a href="#" class="text-decoration-none text-dark fs-5">blog</a>
+          </li>
+          <li>
+            <a href="#" class="text-decoration-none text-dark fs-5">contact </a>
+          </li>
+        </ul>
+      </nav>
 
-        <div class="container-fluid mt-5">
-            <div id="carouselExample" class="carousel slide">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="https://img.freepik.com/free-psd/horizontal-banner-facebook-cover-with-minimal-design-home-furniture-discount_237398-109.jpg?t=st=1737371858~exp=1737375458~hmac=afbf03782b74de6379782fd55b1cb11b3ef594a27a6ae15befa23eed2ed93830&w=1380"
-                            class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="https://img.freepik.com/free-psd/minimal-furniture-facebook-cover-page-template_237398-161.jpg?t=st=1737371912~exp=1737375512~hmac=70d7b46111337afd12e87d6f5d03663b1d7eb350ab96407ea4d048ddafc352af&w=1380"
-                            class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="https://img.freepik.com/premium-psd/furniture-facebook-cover-page-template_237398-164.jpg?w=1380"
-                            class="d-block w-100" alt="...">
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-            </div>
+      <div class="d-lg-none d-md-block">
+        <button class="btn btn-light" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling"
+          aria-controls="offcanvasScrolling">
+          <a href="#"><i class="fa-solid fa-bars text-dark icon"></i></a>
+        </button>
 
+        <div class="offcanvas offcanvas-start" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1"
+          id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
+          <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasScrollingLabel">
+              Header Menu
+            </h5>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          </div>
+
+          <div class="offcanvas-body">
+            <nav>
+              <ul class="d-flex gap-4 list-unstyled flex-column">
+                <li>
+                  <a href="#" class="text-decoration-none text-dark fs-4">Home</a>
+                </li>
+                <li>
+                  <a href="#" class="text-decoration-none text-dark fs-4">Brands</a>
+                </li>
+                <li>
+                  <a href="#" class="text-decoration-none text-dark fs-4">Services</a>
+                </li>
+                <li>
+                  <a href="#" class="text-decoration-none text-dark fs-4">About Us</a>
+                </li>
+                <li>
+                  <a href="#" class="text-decoration-none text-dark fs-4">contact US</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
         </div>
+      </div>
+    </div>
+  </header>
 
-        <div class="container">
+  <!-- slider start -->
+
+  <div id="carouselExampleAutoplaying" class="carousel slide p-4" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img
+          src="https://img.freepik.com/free-psd/horizontal-banner-facebook-cover-with-minimal-design-home-furniture-discount_237398-109.jpg?t=st=1737371858~exp=1737375458~hmac=afbf03782b74de6379782fd55b1cb11b3ef594a27a6ae15befa23eed2ed93830&w=1380"
+          class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img
+          src="https://img.freepik.com/free-psd/minimal-furniture-facebook-cover-page-template_237398-161.jpg?t=st=1737371912~exp=1737375512~hmac=70d7b46111337afd12e87d6f5d03663b1d7eb350ab96407ea4d048ddafc352af&w=1380"
+          class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="https://img.freepik.com/premium-psd/furniture-facebook-cover-page-template_237398-164.jpg?w=1380"
+          class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+      data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+      data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+  <!--customer review  -->
+
+  <div>
+    <h1 class="text-center text-dark p-5 text-decoration-underline">
+      CUSTOMER REVIEW
+    </h1>
+  </div>
+
+  <div class="swiper mySwiper container">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide">
+        <div class="d-flex justify-content-center">
+          <div class="Img1">
+            <img
+              src="https://imgcdn.stablediffusionweb.com/2024/5/25/30254d4f-6760-4501-a741-4ba69ee9a908.jpg"
+              alt="" class="Img img-fluid" />
+          </div>
         </div>
+        <h3>Ojasvi </h3>
+        <p class="px-4">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
+          esse, consectetur commodi ducimus consequatur repudiandae, pariatur
+          illo laboriosam laborum?
+        </p>
 
+        <div>
+          <i class="fa-solid fa-star text-warning"></i>
+          <i class="fa-solid fa-star text-warning"></i>
+          <i class="fa-solid fa-star text-warning"></i>
+          <i class="fa-solid fa-star text-warning"></i>
+          <i class="fa-solid fa-star text-warning"></i>
+        </div>
+      </div>
 
+      <div class="swiper-slide">
+        <div class="d-flex justify-content-center">
+          <div class="Img1">
+            <img
+              src="https://st.depositphotos.com/1011643/1248/i/450/depositphotos_12485614-Asian-businesswoman-with-tablet-computer.jpg"
+              alt="" class="Img img-fluid" />
+          </div>
+        </div>
+        <h3> Aaravi</h3>
+        <p class="px-4">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
+          esse, consectetur commodi ducimus consequatur repudiandae, pariatur
+          illo laboriosam laborum?
+        </p>
 
+        <div>
+          <i class="fa-solid fa-star text-warning"></i>
+          <i class="fa-solid fa-star text-warning"></i>
+          <i class="fa-solid fa-star text-warning"></i>
+          <i class="fa-solid fa-star text-warning"></i>
+          <i class="fa-solid fa-star text-warning"></i>
+        </div>
+      </div>
 
+      <div class="swiper-slide">
+        <div class="d-flex justify-content-center">
+          <div class="Img1">
+            <img
+              src="https://www.shutterstock.com/image-photo/close-face-young-woman-beautiful-600nw-2121831296.jpg"
+              alt="" class="Img img-fluid" />
+          </div>
+        </div>
+        <h3> Charita</h3>
+        <p class="px-4">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
+          esse, consectetur commodi ducimus consequatur repudiandae, pariatur
+          illo laboriosam laborum?
+        </p>
+
+        <div>
+          <i class="fa-solid fa-star text-warning"></i>
+          <i class="fa-solid fa-star text-warning"></i>
+          <i class="fa-solid fa-star text-warning"></i>
+          <i class="fa-solid fa-star text-warning"></i>
+          <i class="fa-solid fa-star text-warning"></i>
+        </div>
+      </div>
+
+      <div class="swiper-slide">
+        <div class="d-flex justify-content-center">
+          <div class="Img1">
+            <img
+              src="https://www.shutterstock.com/image-photo/portrait-young-beauty-makeup-260nw-2445374695.jpg"
+              alt="" class="Img img-fluid" />
+          </div>
+        </div>
+        <h3>Ekaja</h3>
+        <p class="px-4">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
+          esse, consectetur commodi ducimus consequatur repudiandae, pariatur
+          illo laboriosam laborum?
+        </p>
+
+        <div>
+          <i class="fa-solid fa-star text-warning"></i>
+          <i class="fa-solid fa-star text-warning"></i>
+          <i class="fa-solid fa-star text-warning"></i>
+          <i class="fa-solid fa-star text-warning"></i>
+          <i class="fa-solid fa-star text-warning"></i>
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <div class="d-flex justify-content-center">
+          <div class="Img1">
+            <img
+              src="https://www.shutterstock.com/image-photo/realistic-photo-fairskinned-asian-woman-260nw-2519036949.jpg"
+              alt="" class="Img img-fluid" />
+          </div>
+        </div>
+        <h3>Ekanshi</h3>
+        <p class="px-4">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
+          esse, consectetur commodi ducimus consequatur repudiandae, pariatur
+          illo laboriosam laborum?
+        </p>
+
+        <div>
+          <i class="fa-solid fa-star text-warning"></i>
+          <i class="fa-solid fa-star text-warning"></i>
+          <i class="fa-solid fa-star text-warning"></i>
+          <i class="fa-solid fa-star text-warning"></i>
+          <i class="fa-solid fa-star text-warning"></i>
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <div class="d-flex justify-content-center">
+          <div class="Img1">
+            <img
+              src="https://www.shutterstock.com/image-photo/realistic-photo-fairskinned-asian-woman-260nw-2519045221.jpg"
+              alt="" class="Img img-fluid" />
+          </div>
+        </div>
+        <h3>Jones Vrin</h3>
+        <p class="px-4">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
+          esse, consectetur commodi ducimus consequatur repudiandae, pariatur
+          illo laboriosam laborum?
+        </p>
+
+        <div>
+          <i class="fa-solid fa-star text-warning"></i>
+          <i class="fa-solid fa-star text-warning"></i>
+          <i class="fa-solid fa-star text-warning"></i>
+          <i class="fa-solid fa-star text-warning"></i>
+          <i class="fa-solid fa-star text-warning"></i>
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <div class="d-flex justify-content-center">
+          <div class="Img1">
+            <img
+              src="https://static.vecteezy.com/system/resources/thumbnails/048/378/864/small_2x/a-young-happy-pretty-smiling-professional-business-woman-free-photo.jpg"
+              alt="" class="Img img-fluid" />
+          </div>
+        </div>
+        <h3>Yashvi</h3>
+        <p class="px-4">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
+          esse, consectetur commodi ducimus consequatur repudiandae, pariatur
+          illo laboriosam laborum?
+        </p>
+
+        <div>
+          <i class="fa-solid fa-star text-warning"></i>
+          <i class="fa-solid fa-star text-warning"></i>
+          <i class="fa-solid fa-star text-warning"></i>
+          <i class="fa-solid fa-star text-warning"></i>
+          <i class="fa-solid fa-star text-warning"></i>
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <div class="d-flex justify-content-center">
+          <div class="Img1">
+            <img
+              src="https://media.istockphoto.com/id/1289220545/photo/beautiful-woman-smiling-with-crossed-arms.jpg?s=612x612&w=0&k=20&c=qmOTkGstKj1qN0zPVWj-n28oRA6_BHQN8uVLIXg0TF8="
+              alt="" class="Img img-fluid" />
+          </div>
+        </div>
+        <h3> Ihina</h3>
+        <p class="px-4">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
+          esse, consectetur commodi ducimus consequatur repudiandae, pariatur
+          illo laboriosam laborum?
+        </p>
+
+        <div>
+          <i class="fa-solid fa-star text-warning"></i>
+          <i class="fa-solid fa-star text-warning"></i>
+          <i class="fa-solid fa-star text-warning"></i>
+          <i class="fa-solid fa-star text-warning"></i>
+          <i class="fa-solid fa-star text-warning"></i>
+        </div>
+      </div>
 
     </div>
+    <!-- <div class="swiper-pagination"></div> -->
+  </div>
+
+
+
+
+
 </body>
-
+<!-- JS cdn start -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<!-- JS cdn end -->
 
+<!-- swiper Js start -->
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+<!-- swiper JS end -->
+
+<!-- Initialize Swiper -->
+<script>
+  var swiper = new Swiper(".mySwiper", {
+    slidesPerView: 1,
+    spaceBetween: 10,
+    pagination: {
+      el: ".swiper-pagination",
+      clickable: true,
+    },
+    breakpoints: {
+      640: {
+        slidesPerView: 2,
+        spaceBetween: 20,
+      },
+      768: {
+        slidesPerView: 4,
+        spaceBetween: 40,
+      },
+      792: {
+        slidesPerView: 3,
+        spaceBetween: 40,
+      },
+
+      870: {
+        slidesPerView: 3,
+        spaceBetween: 40,
+      },
+      1024: {
+        slidesPerView: 5,
+        spaceBetween: 50,
+      },
+      1126: {
+        slidesPerView: 4,
+        spaceBetween: 40,
+      },
+    },
+  });
+</script>
 
 </html>
